test/files/neg/macro-bundle-polymorphic.check
macro-bundle-polymorphic.scala:9: error: macro bundles must be monomorphic traits extending either blackbox.Macro or whitebox.Macro and not implementing their `val c: Context` member
  def foo = macro Bundle.impl
                  ^
macro-bundle-polymorphic.scala:10: error: macro bundles must be monomorphic traits extending either blackbox.Macro or whitebox.Macro and not implementing their `val c: Context` member
  def foo = macro Bundle[Int].impl
                  ^
macro-bundle-polymorphic.scala:11: error: macro bundles must be monomorphic traits extending either blackbox.Macro or whitebox.Macro and not implementing their `val c: Context` member
  def foo = macro Bundle[Int, Nothing].impl
                  ^
three errors found
